<resources>
    <string name="app_name">AndroidAcademy.Fundamentals</string>
    <string name="movie_poster">Movie poster</string>
    <string name="back">Back</string>
    <string name="avengers_pg">13+</string>
    <string name="avengers_movie">Avengers:\nEnd Game</string>
    <string name="tags_avengers">Action, Adventure, Fantasy</string>
    <string name="avengers_reviews_count">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="avengers_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="location">Movies list</string>
    <string name="list_avengers">Avengers: End Game</string>
    <string name="avengers_duration">137 min</string>

    <!--Movies-->
    <string name="movie_duration">%d min</string>
    <plurals name="movie_reviews">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
    <string name="pg">%d+</string>

    <!--Actors-->
    <string name="actors_error">No actors found for this movie</string>

    <string name="load_error">Something went wrong, please try again later</string>

    <!--Notifications-->
    <string name="channel_top_movie">Top movie</string>
    <string name="channel_top_movie_description">New movie with highest rating</string>
    <string name="schedule_a_watch">Schedule a watch</string>

    <!--Permissions-->
    <string name="calendar_permission_denied">This feature is not available without calendar permission</string>
    <string name="calendar_permission_explanation">To continue please grant access to calendar</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="watch_movie_description">Watch a movie</string>
</resources>