<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movies_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/poster_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="@id/iv_poster"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            app:layout_constraintTop_toTopOf="@id/iv_poster"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/mask_movie_details" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_back"
            app:srcCompat="@drawable/ic_path" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="@color/back_color"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/img_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginBottom="56dp"
            android:text="@string/pg"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_movie_name"
            style="@style/MovieDetailsBigTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:text="@string/avengers_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pg" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:lineSpacingExtra="4sp"
            android:text="@string/tags_avengers"
            android:textColor="@color/color_tags"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/rating_background"
            android:progressTint="@color/rating_progress"
            android:rating="4"
            app:layout_constraintBottom_toBottomOf="@id/tv_reviews"
            app:layout_constraintEnd_toStartOf="@id/tv_reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_reviews" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:lineSpacingExtra="4sp"
            android:text="@string/avengers_reviews_count"
            android:textColor="@color/rating_background"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/tv_tags" />

        <TextView
            android:id="@+id/tv_storyline_title"
            style="@style/MovieDetailsSmallTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:lineSpacingExtra="4sp"
            android:text="@string/avengers_description"
            android:textColor="@color/color_movie_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline_title" />

        <TextView
            android:id="@+id/tv_cast_title"
            style="@style/MovieDetailsSmallTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:text="@string/cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <ImageView
            android:id="@+id/img_actor_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movie_details_start_end_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/img_actor_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
            app:srcCompat="@drawable/robert_downey_jr" />

        <ImageView
            android:id="@+id/img_actor_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_image_gap"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/img_actor_3"
            app:layout_constraintStart_toEndOf="@+id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
            app:srcCompat="@drawable/chris_evans" />

        <ImageView
            android:id="@+id/img_actor_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_image_gap"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/img_actor_4"
            app:layout_constraintStart_toEndOf="@+id/img_actor_2"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
            app:srcCompat="@drawable/mark_ruffalo" />

        <ImageView
            android:id="@+id/img_actor_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_image_gap"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_actor_3"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
            app:srcCompat="@drawable/chris_hemsworth" />

        <TextView
            android:id="@+id/tv_actor_1"
            style="@style/MovieDetailsActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/movie_details_bottom_margin"
            android:text="@string/robert_downey_jr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/img_actor_1"
            app:layout_constraintStart_toStartOf="@id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/img_actor_1" />

        <TextView
            android:id="@+id/tv_actor_2"
            style="@style/MovieDetailsActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_details_bottom_margin"
            android:text="@string/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/img_actor_2"
            app:layout_constraintStart_toStartOf="@id/img_actor_2"
            app:layout_constraintTop_toTopOf="@id/tv_actor_1" />

        <TextView
            android:id="@+id/tv_actor_3"
            style="@style/MovieDetailsActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_details_bottom_margin"
            android:text="@string/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@id/img_actor_3"
            app:layout_constraintStart_toStartOf="@id/img_actor_3"
            app:layout_constraintTop_toTopOf="@id/tv_actor_1" />

        <TextView
            android:id="@+id/tv_actor_4"
            style="@style/MovieDetailsActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_details_bottom_margin"
            android:text="@string/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/img_actor_4"
            app:layout_constraintStart_toStartOf="@id/img_actor_4"
            app:layout_constraintTop_toTopOf="@id/tv_actor_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>