<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_movie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="@color/movies_background"
    app:cardCornerRadius="8dp"
    app:cardElevation="24dp"
    app:strokeColor="@color/movie_stroke"
    app:strokeWidth="1dp"
    tools:layout_marginStart="12dp"
    tools:layout_marginTop="27dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="166dp"
            android:layout_height="246dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/avengers" />

        <ImageView
            android:id="@+id/iv_movie_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie"
            app:layout_constraintEnd_toEndOf="@id/iv_movie"
            app:layout_constraintStart_toStartOf="@id/iv_movie"
            app:layout_constraintTop_toTopOf="@id/iv_movie"
            app:srcCompat="@drawable/mask_movie_list" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/MoviesListRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_list_edge"
            app:layout_constraintBottom_toBottomOf="@id/tv_reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_reviews" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/movie_details_start_end_margin"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="4sp"
            android:textAllCaps="true"
            android:textColor="@color/rating_background"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rating"
            tools:text="@string/avengers_reviews_count" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_list_edge"
            android:layout_marginEnd="@dimen/movies_list_edge"
            android:layout_marginBottom="4dp"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/color_tags"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/tags_avengers" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/movies_list_edge"
            app:layout_constraintEnd_toEndOf="@id/iv_movie"
            app:layout_constraintTop_toTopOf="@id/iv_movie"
            tools:srcCompat="@drawable/ic_like" />

        <TextView
            android:id="@+id/tv_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_list_edge"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_pg"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/avengers_pg" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/movies_background"
            android:lineSpacingExtra="4sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/movie_details_title"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie"
            tools:text="@string/list_avengers" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/movies_background"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/color_duration"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
            tools:text="@string/avengers_duration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>